--- a/style.css
+++ b/style.css
@@ -231,9 +231,16 @@ h2 { margin-bottom: 30px; color: #555; font-weight: normal; text-align: center; 
 .modal-content-video {
     margin: auto;
     display: flex;
-    width: 80%;
-    max-width: 900px;
-    height: 80%;
+    width: 90%;
+    height: 90%;
+    max-width: none;
     justify-content: center;
     align-items: center;
+    position: relative;
+}
+
+.modal-content-video iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
 }
